--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="container">
-  <ion-img src="assets/icon/image.png" />
+  <ion-img src="assets/icon/image1.png" />
   </div>
   <div class="sign-up">
 
