--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -1,25 +1,47 @@
 
 <ion-content [fullscreen]="true">
-  <div class ="header">
-    <ion-title class="title">
-      Enter You Email 
-      <p class="subTitle">To recieve a reset password Link</p>
+  <div>
+    <ion-title>
+      <div class="frgtpass-container">
+      <ion-img src="assets/icon/image10.png" /></div>
+      <p class="forgot-password">forgot password</p>
 
     </ion-title>
   </div>
-  <div>
-    <ion-item>
-      <ion-input class="input" placeholder="Enter your email"> </ion-input>
-      <ion-icon name="person-outline"></ion-icon>
+  <div class="component-4">
+    <img src="/assets/icon/image2.png" class="component-image">
 
-    </ion-item>
-    <ion-fab vertical="button"  horizontal="end" style="margin-bottom: 30px;">
-      <ion-fab-button [routerLink]="['/login']">
-        <ion-icon name="chevron-forward">
-  
-        </ion-icon>
-  
-      </ion-fab-button>
-    </ion-fab>
+    
   </div>
+       
+  <div class="verification-text">
+    Please enter your Email Address To Receive a Verification code
+  </div>
+  <div class="continue-with-email">
+    Continue with Email
+  </div>
+  <div class="forgot-passwor">
+    Forgot Your Password?
+  </div>
+  <div class="rectangle-3124"></div>
+ 
+  <div class="component-5"> 
+    <img src="/assets/icon/image.png" class="component-image">
+  </div>
+  <div class="continue-with-email1">
+    Continue with Phone
+  </div>
+  
+  <div class="forgot-passwor1">
+    Forgot Your Password?
+  </div>
+  <div class="rectangle-31241"></div>
+  <ion-button  class="custom-button"  expand="block"
+      style="border-radius: 35px; height: 45px; width: 299px;"
+      [routerLink]="['/verificationemail']">
+      <span class="sign-in-text"> create acount</span>
+    
+    </ion-button>
+ 
+ 
 </ion-content>
