--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -26,7 +26,7 @@
   <div class="rectangle-3124"></div>
  
   <div class="component-5"> 
-    <img src="/assets/icon/image.png" class="component-image">
+    <img src="/assets/icon/i.png" class="component-image">
   </div>
   <div class="continue-with-email1">
     Continue with Phone
