--- a/src/app/verificationemail/verificationemail.page.html
+++ b/src/app/verificationemail/verificationemail.page.html
@@ -8,7 +8,7 @@
 
   </ion-title>
   <div class="verification-text">
-    Please enter your Email Address To Receive a Verification code
+    Please enter you code sent to 
   </div>
   <div class="component-3">
     <ion-img src="assets/icon/image.png" /></div>
