--- a/src/app/verificationemail/verificationemail.page.html
+++ b/src/app/verificationemail/verificationemail.page.html
@@ -11,7 +11,7 @@
     Please enter you code sent to 
   </div>
   <div class="component-3">
-    <ion-img src="assets/icon/image.png" /></div>
+    <ion-img src="assets/icon/im1.png" /></div>
     <ion-button  class="custom-button"  expand="block"
     style="border-radius: 35px; height: 45px; width: 299px;"
     [routerLink]="['/newpass']">
