--- a/src/app/newpass/newpass.page.html
+++ b/src/app/newpass/newpass.page.html
@@ -1,13 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>newpass</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">newpass</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="frgtpass-container">
+    <ion-img src="assets/icon/image.png" />
+    </div>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-sm="8" size-md="6" size-lg="4" class="ion-text-center">
+       
+        <div class="pass-image"></div>
+
+        <!-- Page Title -->
+        <h1 class="create-password-title">Create New Password</h1>
+
+        <!-- Email Input -->
+        <ion-item class="input-item">
+          <ion-label position="floating">New password</ion-label>
+          <ion-input type="email"></ion-input>
+        </ion-item>
+
+        <!-- Password Input -->
+        <ion-item class="input-item">
+          <ion-label position="floating"> Confirm Password</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+
+        <!-- Submit Button -->
+        <ion-button  class="custom-button"  expand="block"
+      style="border-radius: 35px; height: 45px; width: 299px;"
+      [routerLink]="['/home']">
+      <span class="sign-in-text"> save</span>
+    
+    </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
