--- a/src/app/verificationemail/verificationemail.page.scss
+++ b/src/app/verificationemail/verificationemail.page.scss
@@ -20,7 +20,7 @@
     height: 218px;
     left: 100px;
     top: 80px;
-    background: url('/assets/image.png') no-repeat center center;
+    background: url('/assets/image3.png') no-repeat center center;
     background-size: cover;
   }
   .verification-text {
@@ -55,7 +55,7 @@
     width: 299px;
     height: 45px;
     left: 80px;
-    top: 664px;
+    top: 500px;
   
     /* Styling */
     background: #4DA768;
@@ -75,5 +75,5 @@
     height: 49px;
     left: 100px;
     right: 100px;
-    top: 541px;
+    top: 400px;
 }
