--- a/src/app/newpass/newpass.page.html
+++ b/src/app/newpass/newpass.page.html
@@ -1,7 +1,7 @@
 
 <ion-content>
   <div class="frgtpass-container">
-    <ion-img src="assets/icon/image.png" />
+    <ion-img src="assets/icon/imagep.png" />
     </div>
   <ion-grid>
     <ion-row class="ion-justify-content-center">
@@ -27,7 +27,7 @@
         <!-- Submit Button -->
         <ion-button  class="custom-button"  expand="block"
       style="border-radius: 35px; height: 45px; width: 299px;"
-      [routerLink]="['/home']">
+      [routerLink]="['/password-changed']">
       <span class="sign-in-text"> save</span>
     
     </ion-button>
