--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+          <img class="ellipse-6" src="image.png" alt="Profile Image" />
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <div class="sidebar">
+        <div class="rectangle-3126"></div>
+
+        <ion-list>
+          <ion-item class="nomprofil" (click)="closeMenu()">Arij Mahmoudi<p> <div class="email" (click)="closeMenu()">arijmahmoudigmail.com</div></ion-item>
+         
+
+          <ion-item  (click)="closeMenu()"><div class="email-icon">
+            <ion-icon name="mail-outline" > </ion-icon> Contact Us
+          </div></ion-item>
+          <ion-item (click)="closeMenu()" > <ion-icon name="settings-outline" ></ion-icon> Settings</ion-item>
+        </ion-list>
+
+        <!-- Logout Group positioned at the bottom -->
+        <div class="logout">
+          <ion-icon name="log-out-outline"></ion-icon>
+          Logout
+        </div>
+      </div>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
