--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,53 @@
 
 
-<ion-content [fullscreen]="true">
-  <div class="l"></div>
+<ion-header>
+ 
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    
+    <ion-title></ion-title>
+  
+</ion-header>
+
+<ion-content>
+  
+  <div class="custom-component">
+    <p>find your </p>
+    <h2>game</h2>
+    
+    
+    
+  </div>
+  <div class="input-variant">
+    <input type="text" placeholder="Enter text here" />
+    
+  </div>
+ 
+  
+  <div class="component16">
+    <!-- Add your content here -->
+    <h2>Component Title</h2>
+    <p>09/10/2024</p>
+  </div>
+  
+ 
 </ion-content>
+<ion-footer>
+  <ion-toolbar class="navbar">
+    <ion-buttons slot="start" class="icon-buttons">
+      <ion-button routerLink="/home">
+        <ion-icon name="home" ><a ></a></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/settings">
+        <ion-icon name="notifications-outline"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/">
+        <ion-icon name="person"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/">
+        <ion-icon name="pulse"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
