--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -5,12 +5,37 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-item>
-    <ion-label>Reminder Time</ion-label>
-    <ion-select [(ngModel)]="reminderTime">
-      <ion-select-option value="3600000">1 Hour Before</ion-select-option>
-      <ion-select-option value="1800000">30 Minutes Before</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <ion-button (click)="savePreferences()">Save Preferences</ion-button>
+  <ion-list class="component-6">
+    <ion-item *ngFor="let notification of notifications">
+      <ion-label>
+        <h2>{{ notification.title }}</h2>
+        <p>{{ notification.message }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+
+
+ 
 </ion-content>
+
+
+
+<ion-footer>
+  <ion-toolbar class="navbar">
+    <ion-buttons slot="start" class="icon-buttons">
+      <ion-button routerLink="/home">
+        <ion-icon name="home"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/notifications">
+        <ion-icon name="notifications-outline"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/profile">
+        <ion-icon name="person"></ion-icon>
+      </ion-button>
+      <ion-button routerLink="/health">
+        <ion-icon name="pulse"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
